[project]
name = "busquedas"
version = "0.1.0"
description = ""
authors = [
    {name = "Chema Segarra",email = "chegarra@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "busquedas", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
