[project]
name = "viajando_por_rumania_a_todo_color"
version = "0.1.0"
description = "Calcula la ruta más corta entre dos nodos usando Dijkstra."
authors = [
    {name = "Chema Segarra",email = "chegarra@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false
s
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
